--- a/index.css
+++ b/index.css
@@ -62,6 +62,11 @@
   margin-top: 20px;
 }
 
+.btn:hover {
+  background-color: black;
+  color: white;
+}
+
 .name-surname {
   display: flex;
   justify-content: space-between;
@@ -178,6 +183,10 @@ p.adrs {
   line-height: 14px;
 }
 
+a:link {
+  text-decoration: none;
+}
+
 ul {
   list-style-type: none;
   padding: 0;
@@ -194,6 +203,10 @@ ul {
   color: #101010;
   line-height: 160%;
   text-transform: capitalize;
+}
+
+li {
+  color: #101010;
 }
 
 .mail.number {
